# iterframes

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  Readme.md  build.sh  pyproject.toml  requirements-dev.txt  tox.ini
iterframes/: __init__.py
scripts/: bench.py  build_macos.sh  build_manylinux.sh
src/: decoder.rs  lib.rs  threaded_decoder.rs  video_reader.rs
tests/: conftest.py  test_integration.py
tests/benchmark/: test_benchmark_decord.py
tests/integration/: test_integration.py
