[package]
name = "iterframes"
version = "0.2.0"
authors = ["Alessio Sanfratello"]
edition = "2018"
description = "Iterate on video frames quickly"
readme = "Readme.md"
repository = "https://github.com/alesanfra/iterframes"

[dependencies]
pyo3 = { version = "0.13.0", features = ["extension-module"] }
ffmpeg-next = "4.3.8"
ndarray = "0.14.0"
numpy = "0.13"

[lib]
name = "iterframes"
crate-type = ["cdylib"]

[package.metadata.maturin]
requires-dist = ["numpy>=1.16.0"]
requires-python = ">=3.6"
