[package]
name = "iterframes"
version = "0.3.0"
authors = ["Alessio Sanfratello"]
edition = "2021"
description = "Iterate on video frames quickly"
readme = "README.md"
homepage = "https://github.com/alesanfra/iterframes"
repository = "https://github.com/alesanfra/iterframes"

[dependencies]
pyo3 = { version = "*", features = ["extension-module", "abi3-py36"] }
ffmpeg = { package = "ffmpeg-next", version = "*" }
crossbeam = "*"

[lib]
name = "iterframes"
crate-type = ["cdylib"]
